# wasm-imageprocessing-benchmark

./: .gitignore  README.md  build_docker.sh  index.html  index.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: gh-pages-slide.yml_removed  gh-pages.yml
assets/: FileSaver.min.99f99ec7.js  index.03e08aab.css  index.07966e2f.js  index.0dad16c7.js  index.11984d6e.js  index.47d25886.js  index.5fc1af49.css  index.a6f96eb5.css  index.c17b4a56.js  index.c27247f1.js  index.d097f37f.css  index.db5f3f35.js  motion.11cffd70.js  motion.43d40351.js
benchmark/: _headers  build_wasm.sh  cpp-cnt.txt  cpp_simd-cnt.txt  deploy_site.sh  index.html  index.js  package.json  rust-opt.wasm  rust-opt.wat  rust.wat  webpack.config.js
benchmark/wasm/emscripten/: CMakeLists.txt  build.sh  wasm.cc  wasm.hpp  wasm_perf.cc  wasm_test.cc
benchmark/wasm/emscripten/halide/: postprocess.cpp  preprocess.cpp  preprocess_lut.cpp
benchmark/wasm/emscripten/lib/: postprocess_task.h  postprocess_task.schedule.h  preprocess_task.h  preprocess_task.schedule.h  preprocess_task_lut.h  preprocess_task_lut.schedule.h
benchmark/wasm/emscripten/lib_native/: postprocess_task.h  preprocess_task.h  preprocess_task_lut.h
benchmark/wasm/emscripten/lib_simd/: postprocess_task.h  postprocess_task.registration.cpp  postprocess_task.schedule.h  preprocess_task.h  preprocess_task.schedule.h  preprocess_task_lut.h  preprocess_task_lut.registration.cpp
benchmark/wasm/emscripten/lib_simd_threads/: postprocess_task.h  postprocess_task.schedule.h  preprocess_task.h  preprocess_task.registration.cpp  preprocess_task.schedule.h  preprocess_task_lut.h  preprocess_task_lut.schedule.h
benchmark/wasm/emscripten/lib_threads/: postprocess_task.h  postprocess_task.schedule.h  preprocess_task.h  preprocess_task.schedule.h  preprocess_task_lut.h  preprocess_task_lut.schedule.h
benchmark/wasm/rust/: Cargo.toml
benchmark/wasm/rust/pkg/: package.json  wasmcopy_rs.d.ts  wasmcopy_rs_bg.wasm  wasmcopy_rs_bg.wasm.d.ts
benchmark/wasm/rust/src/: lib.rs
docker/: Dockerfile  cpuinfo.patch  pytorch.patch  xnnpack.patch
docker/tflite/: .bazelrc  BUILD  WORKSPACE  dummy.cc
pytorch-demo/: build_wasm.sh  index.html
pytorch-demo/wasm/: CMakeLists.txt  build.sh  wasm.cc
slide/: package.json  slides.md
wasm/rust/pkg/: wasmcopy_rs.js  wasmcopy_rs_bg.js
